setup-domain/kubernetes&argoCD/kubernetes/kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
    cert-manager.io/cluster-issuer: letsencrypt-prod 
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.cambostack.codes
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443 
  tls:
  - hosts:
    - kubernetes.cambostack.codes
    secretName: kubernetes-dashboard-tls
